# libpanel-rs

./: .gitignore  .gitlab-ci.yml  Adw-1.gir  Cargo.toml  Gir.toml  Panel-1.gir  README.md  meson.build
examples/: example-window.rs  example-window.ui
examples/basic/: main.rs  page.rs  window.rs
src/: gsettings_action_group.rs  layered_settings.rs  lib.rs  menu_manager.rs  prelude.rs  save_delegate.rs  session_item.rs  settings.rs
src/auto/: action_muxer.rs  application.rs  changes_dialog.rs  constants.rs  dock.rs  dock_switcher.rs  document_workspace.rs  enums.rs  frame.rs  frame_header.rs  frame_header_bar.rs  frame_switcher.rs  frame_tab_bar.rs  functions.rs  grid.rs  grid_column.rs  gsettings_action_group.rs  inhibitor.rs  layered_settings.rs  menu_manager.rs  mod.rs  omni_bar.rs  paned.rs  position.rs  save_delegate.rs  save_dialog.rs  session.rs  session_item.rs  settings.rs  statusbar.rs  theme_selector.rs  toggle_button.rs  versions.txt  widget.rs  workbench.rs  workspace.rs
src/subclass/: application.rs  dock.rs  document_workspace.rs  frame.rs  frame_header.rs  grid.rs  mod.rs  omni_bar.rs  save_delegate.rs  widget.rs  workbench.rs  workspace.rs
subprojects/: libpanel.wrap
sys/: Cargo.toml  Gir.toml  build.rs  build_version.rs
sys/src/: lib.rs
sys/tests/: abi.rs  constant.c  layout.c  manual.h
