[package]
name = "libpanel"
version = "0.5.0"
authors = ["Jason Francis <jafrancis999@gmail.com>"]
edition = "2021"
homepage = "https://world.pages.gitlab.gnome.org/Rust/libpanel-rs/"
description = "Rust bindings for GNOME libpanel"
license = "MIT"
readme = "README.md"
repository = "https://gitlab.gnome.org/World/Rust/libpanel-rs"
documentation = "https://world.pages.gitlab.gnome.org/Rust/libpanel-rs/stable/latest/docs/libpanel"
categories = ["api-bindings", "gui"]
keywords = ["gtk4-rs", "gnome", "adwaita", "panel", "GUI"]
rust-version = "1.70"
include = ["/src", "/examples", "/README.md", "/COPYING"]

[lib]
name = "libpanel"

[features]
default = []
v1_2 = ["ffi/v1_2"]
v1_4 = ["v1_2", "ffi/v1_4"]
v1_8 = ["v1_4", "ffi/v1_8"]
adw_v1_2 = ["adw/v1_2"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
futures-core = { version = "0.3", default-features = false }
ffi = { package = "libpanel-sys", path = "./sys", version = "0.5.0" }
glib = { git = "https://github.com/gtk-rs/gtk-rs-core", version = "0.20", branch = "0.20"}
gio = { git = "https://github.com/gtk-rs/gtk-rs-core", version = "0.20", branch = "0.20" }
gdk = { git = "https://github.com/gtk-rs/gtk4-rs", package = "gdk4", version = "0.9", branch = "0.9"}
gtk = { git = "https://github.com/gtk-rs/gtk4-rs", package = "gtk4", version = "0.9", branch = "0.9"}
adw = { git = "https://gitlab.gnome.org/World/Rust/libadwaita-rs", package = "libadwaita", version = "0.7", branch = "v0.7"}
libc = "0.2.140"

[workspace]
members = ["sys"]
exclude = ["gir", "gir-files"]

[[bin]]
path = "./examples/basic/main.rs"
name = "main"
