[package]
name = "libpanel"
version = "0.6.0"
authors = ["Jason Francis <jafrancis999@gmail.com>"]
edition = "2021"
homepage = "https://world.pages.gitlab.gnome.org/Rust/libpanel-rs/"
description = "Rust bindings for GNOME libpanel"
license = "MIT"
readme = "README.md"
repository = "https://gitlab.gnome.org/World/Rust/libpanel-rs"
documentation = "https://world.pages.gitlab.gnome.org/Rust/libpanel-rs/stable/latest/docs/libpanel"
categories = ["api-bindings", "gui"]
keywords = ["gtk4-rs", "gnome", "adwaita", "panel", "GUI"]
rust-version = "1.70"
include = ["/src", "/examples", "/README.md", "/COPYING"]

[lib]
name = "libpanel"

[features]
default = []
v1_2 = ["ffi/v1_2"]
v1_4 = ["v1_2", "ffi/v1_4"]
v1_8 = ["v1_4", "ffi/v1_8"]
adw_v1_2 = ["adw/v1_2"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
futures-core = { version = "0.3", default-features = false }
ffi = { package = "libpanel-sys", path = "./sys", version = "0.6.0" }
glib = { git = "https://github.com/gtk-rs/gtk-rs-core", version = "0.21", branch = "master"}
gio = { git = "https://github.com/gtk-rs/gtk-rs-core", version = "0.21", branch = "master" }
gdk = { git = "https://github.com/gtk-rs/gtk4-rs", package = "gdk4", version = "0.10", branch = "master"}
gtk = { git = "https://github.com/gtk-rs/gtk4-rs", package = "gtk4", version = "0.10", branch = "master"}
adw = { git = "https://gitlab.gnome.org/World/Rust/libadwaita-rs", package = "libadwaita", version = "0.8", branch = "master"}
libc = "0.2.140"

[workspace]
members = ["sys"]
exclude = ["gir", "gir-files"]

[[bin]]
path = "./examples/basic/main.rs"
name = "main"
