[package]
name = "libpanel-sys"
version = "0.1.0-alpha-2"
authors = ["Jason Francis <jafrancis999@gmail.com>"]
edition = "2018"
build = "build.rs"
links = "libpanel-1"
categories = ["api-bindings", "gui"]
keywords = ["gtk4-rs", "gnome", "adwaita", "panel", "GUI"]
description = "FFI bindings for GNOME libpanel"
license = "MIT"
homepage = "https://world.pages.gitlab.gnome.org/Rust/libpanel-rs/"
repository = "https://gitlab.gnome.org/World/Rust/libpanel-rs"
documentation = "https://world.pages.gitlab.gnome.org/Rust/libpanel-rs/stable/latest/docs/libpanel_sys"
[package.metadata.docs.rs]
features = ["dox"]
[package.metadata.system-deps.libpanel_1]
name = "libpanel-1"
version = "1.0.0-alpha0"

[lib]
name = "libpanel_sys"

[features]
dox = []

[dependencies]
libc = "0.2"

[dependencies.gio]
git = "https://github.com/gtk-rs/gtk-rs-core"
package = "gio-sys"

[dependencies.glib]
git = "https://github.com/gtk-rs/gtk-rs-core"
package = "glib-sys"

[dependencies.gobject]
git = "https://github.com/gtk-rs/gtk-rs-core"
package = "gobject-sys"

[dependencies.gdk]
git = "https://github.com/gtk-rs/gtk4-rs"
package = "gdk4-sys"

[dependencies.gtk]
git = "https://github.com/gtk-rs/gtk4-rs"
package = "gtk4-sys"

[dependencies.adw]
git = "https://gitlab.gnome.org/World/Rust/libadwaita-rs"
package = "libadwaita-sys"

[build-dependencies]
system-deps = "6"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"
