[package]
name = "libpanel-sys"
version = "0.3.0"
authors = ["Jason Francis <jafrancis999@gmail.com>"]
edition = "2021"
build = "build.rs"
links = "libpanel-1"
categories = ["api-bindings", "gui"]
keywords = ["gtk4-rs", "gnome", "adwaita", "panel", "GUI"]
description = "FFI bindings for GNOME libpanel"
license = "MIT"
homepage = "https://world.pages.gitlab.gnome.org/Rust/libpanel-rs/"
repository = "https://gitlab.gnome.org/World/Rust/libpanel-rs"
documentation = "https://world.pages.gitlab.gnome.org/Rust/libpanel-rs/stable/latest/docs/libpanel_sys"
include = ["/src", "/tests", "/build.rs", "/COPYING"]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.system-deps.libpanel_1]
name = "libpanel-1"
version = "1.0.0"

[package.metadata.system-deps.libpanel_1.v1_2]
version = "1.1"

[package.metadata.system-deps.libpanel_1.v1_4]
version = "1.3"

[lib]
name = "libpanel_sys"

[features]
v1_2 = []
v1_4 = ["v1_2"]

[dependencies]
libc = "0.2"

[dependencies.gio-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.20"
branch = "master"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.20"
branch = "master"

[dependencies.gobject-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.20"
branch = "master"

[dependencies.gtk-sys]
git = "https://github.com/gtk-rs/gtk4-rs"
package = "gtk4-sys"
version = "0.9"
branch = "master"

[dependencies.adw-sys]
git = "https://gitlab.gnome.org/World/Rust/libadwaita-rs"
package = "libadwaita-sys"
version = "0.7"
branch = "master"

[build-dependencies]
system-deps = "6"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"
